--- a/index.html
+++ b/index.html
@@ -297,11 +297,11 @@
 
         <!-- Игры -->
         <div class="games-container">
-            <button class="nav-btn clicker-btn" onclick="window.location.href='artur-clicker.html'">
+            <button class="nav-btn clicker-btn" onclick="window.location.href='clicker-game.html'">
                 💎 Кликер
             </button>
 
-            <button class="nav-btn game-btn" onclick="window.location.href='game.html'">
+            <button class="nav-btn game-btn" onclick="window.location.href='lovi-game.html'">
                 🎮 Поймай
             </button>
 
